--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,15 +1,32 @@
 pipeline {
-  agent any
-  stages {
-    stage('install npm') {
-      steps {
-        sh 'npm install'
-      }
-    }
-    stage('run cypress') {
-      steps {
-        sh 'npm run test'
-      }
-    }
-  }
+   agent any
+
+   tools {nodejs "Node12"}
+
+   environment {
+       CHROME_BIN = '/bin/google-chrome'
+      
+   }
+
+   stages {
+       stage('Dependencies') {
+           steps {
+               sh 'npm i'
+           }
+       }
+       stage('e2e Tests') {
+         Parallel{
+             stage('Test 1') {
+                  steps {
+                sh 'npm run test'
+                  }
+               }
+             
+       }
+       stage('Deploy') {
+           steps {
+               echo 'Deploying....'
+           }
+       }
+   }
 }
