--- a/jenkinsfile
+++ b/jenkinsfile
@@ -8,9 +8,16 @@ pipeline {
    stages {
        stage('Dependencies') {
            steps {
-               sh 'npm i'
+               sh 'npm install -g'
            }
        }
+       stages {
+       stage('Dependencies of cypress') {
+           steps {
+               sh 'npm install -g cypress'
+           }
+       }
+       
        stage('e2e Tests') {
                   steps {
                 sh 'npm run test'
